{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 221,
  "lineage": "3bfb2b0d-b465-898c-b384-c73e4ba671cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:internet-gateway/igw-0b475f3bb78179df7",
            "id": "igw-0b475f3bb78179df7",
            "owner_id": "881962383269",
            "tags": {
              "Name": "app-igw"
            },
            "tags_all": {
              "Name": "app-igw"
            },
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:loadbalancer/app/app-lb/e3f6fa90e8c0a55a",
            "arn_suffix": "app/app-lb/e3f6fa90e8c0a55a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-441699923.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:881962383269:loadbalancer/app/app-lb/e3f6fa90e8c0a55a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09bc192697fa33b7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-069f0cc7525ec30c2"
              },
              {
                "subnet_id": "subnet-092d04eee11fe7ba0"
              }
            ],
            "subnets": [
              "subnet-069f0cc7525ec30c2",
              "subnet-092d04eee11fe7ba0"
            ],
            "tags": {
              "Name": "app-lb"
            },
            "tags_all": {
              "Name": "app-lb"
            },
            "vpc_id": "vpc-0443fe61f530d1c2e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_service",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:listener/app/app-lb/e3f6fa90e8c0a55a/489a4848a5e0eb63",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:targetgroup/backend-tg/a9697b8a037a16f0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881962383269:listener/app/app-lb/e3f6fa90e8c0a55a/489a4848a5e0eb63",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:loadbalancer/app/app-lb/e3f6fa90e8c0a55a",
            "mutual_authentication": [],
            "port": 5050,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.backend",
            "aws_security_group.ecs_service",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:listener/app/app-lb/e3f6fa90e8c0a55a/6455efc7683138d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:targetgroup/frontend-tg/92356de25f5a1f91",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881962383269:listener/app/app-lb/e3f6fa90e8c0a55a/6455efc7683138d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:loadbalancer/app/app-lb/e3f6fa90e8c0a55a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.ecs_service",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:targetgroup/backend-tg/a9697b8a037a16f0",
            "arn_suffix": "targetgroup/backend-tg/a9697b8a037a16f0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881962383269:targetgroup/backend-tg/a9697b8a037a16f0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:881962383269:loadbalancer/app/app-lb/e3f6fa90e8c0a55a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 5050,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "backend-tg"
            },
            "tags_all": {
              "Name": "backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:881962383269:targetgroup/frontend-tg/92356de25f5a1f91",
            "arn_suffix": "targetgroup/frontend-tg/92356de25f5a1f91",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:881962383269:targetgroup/frontend-tg/92356de25f5a1f91",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:881962383269:loadbalancer/app/app-lb/e3f6fa90e8c0a55a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "frontend-tg"
            },
            "tags_all": {
              "Name": "frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:route-table/rtb-06022b73f8374df1f",
            "id": "rtb-06022b73f8374df1f",
            "owner_id": "881962383269",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b475f3bb78179df7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-public-rt"
            },
            "tags_all": {
              "Name": "app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e658638353b17144",
            "route_table_id": "rtb-06022b73f8374df1f",
            "subnet_id": "subnet-092d04eee11fe7ba0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d09e925ca96193",
            "route_table_id": "rtb-06022b73f8374df1f",
            "subnet_id": "subnet-069f0cc7525ec30c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:security-group/sg-09bc192697fa33b7a",
            "description": "Allow inbound traffic to ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09bc192697fa33b7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "ecs_service_sg",
            "name_prefix": "",
            "owner_id": "881962383269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_service_sg"
            },
            "tags_all": {
              "Name": "ecs_service_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:subnet/subnet-0ad0c7923e7862c52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad0c7923e7862c52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881962383269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet-1"
            },
            "tags_all": {
              "Name": "app-private-subnet-1"
            },
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:subnet/subnet-0403c62339cc500d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0403c62339cc500d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "881962383269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-private-subnet-2"
            },
            "tags_all": {
              "Name": "app-private-subnet-2"
            },
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:subnet/subnet-092d04eee11fe7ba0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092d04eee11fe7ba0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881962383269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-public-subnet-1"
            },
            "tags_all": {
              "Name": "app-public-subnet-1"
            },
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:subnet/subnet-069f0cc7525ec30c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069f0cc7525ec30c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "881962383269",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-public-subnet-2"
            },
            "tags_all": {
              "Name": "app-public-subnet-2"
            },
            "vpc_id": "vpc-0443fe61f530d1c2e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:881962383269:vpc/vpc-0443fe61f530d1c2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07daefe7da35a5c82",
            "default_route_table_id": "rtb-01fa7b89baa1fd83f",
            "default_security_group_id": "sg-014b48b53dc664d0c",
            "dhcp_options_id": "dopt-017bfaf52639f8a6c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0443fe61f530d1c2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01fa7b89baa1fd83f",
            "owner_id": "881962383269",
            "tags": {
              "Name": "app-vpc"
            },
            "tags_all": {
              "Name": "app-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}